--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         .bg {
             width: 360px;
-            background-image: 
-            url('rabbit.jpg');
+            background-image:
+                url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-grid.png");
         }
 
         .msg {
@@ -34,19 +34,18 @@
         .bucket {
             width: 160px;
             height: 160px;
-            color: white;
         }
 
-        .img {
+        .img1 {
             background-image:
-                url('rabbit.jpg');
+                url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-red.png");
             background-size: cover;
             background-position: center;
         }
 
-        .img3 {
+        .img2 {
             background-image:
-                url('dongbaek.jpg');
+                url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-lightred.png");
             background-size: cover;
             background-position: center;
         }
@@ -55,16 +54,16 @@
         href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
 
-<body class="bg-t2 center">
-    <h1 class="title">2023 신년계획</h1>
+<body class="bg-t5 center">
+    <h1 class="title-t5">2023 신년계획</h1>
     <p class="msg">조금씩 꾸준히!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img center">영어로 유창하게 말하기</div>
-        <div class="bucket img3 center">일기랑 가계부 쓰기</div>
-        <div class="bucket img3 center">캐나다 워킹 홀리데이</div>
-        <div class="bucket img center">코딩 배우기</div>
-        <div class="bucket img center">이직 준비하기</div>
-        <div class="bucket img3 center">운동 계속하기</div>
+        <div class="bucket img1-t5 center">영어로 유창하게 말하기</div>
+        <div class="bucket img2-t5 center">일기랑 가계부 쓰기</div>
+        <div class="bucket img2-t5 center">캐나다 워킹 홀리데이</div>
+        <div class="bucket img1-t5 center">코딩 배우기</div>
+        <div class="bucket img1-t5 center">이직 준비하기</div>
+        <div class="bucket img2-t5 center">운동 계속하기</div>
     </div>
 
 </body>
