--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to Live Academy</title>
+    <title>Live Academy</title>
     <meta charset="utf-8">
 </head>
 
@@ -13,7 +13,9 @@
         <li><a href="3.html">시제 연습</a></li>
     </ol>
 
-    <h2>라이브 아카데미</h2>
-    <p>하루에 하나씩 공부하기</p>
+    <h2>연습가이드</h2>
+    <p>
+    10시 30분에 씻어야지
+    </p>
 </body>
 </html>
